--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <!-- Hero start -->
     <section class="text-gray-600 body-font" style="margin-top:45px;">
-      <div class="container" style="margin-left: 63px;" id="about">
+      <div style="margin-left:25px; margin-right: 25px;" id="about">
       <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900" style="text-align: center;">The power of Good Advice<br class="hidden lg:inline-block" />...........</h1>
 <p class="mb-8 leading-relaxed" style="text-align: center;">Advices can lead to the fall and rise of empires. So when its about your own empire why settle for less? Financial planning is not a luxury, it is a modern day necessity. Nivesh Manch is a one stop solution for all your Investment and Insurance requirements.</p>
 <p style="text-align: center;">"Nivesh Manch is a new generation investment management marketplace, offering end to end customized wealth management solutions across 75 cities. We customize the best fit solutions for you from our vast range of financial offerings: Mutual Funds, NFO, Insurance, Fixed Deposit, Corporate Bonds, PMS, ETFs. We dedicate a separate vertical for NRIs. Nivesh Manch is being managed by a dedicated team of seasoned investment professionals and is very well managing an AUM of ₹ 5 Crores from the esteemed investors from PAN India. We are endorsed by HNIs &amp; NRI clients also. We are very grateful to our clients/ investors. At Nivesh Manch, we maintain the highest degree of confidentiality &amp; abide by strict ethical code of conduct."</p>
@@ -171,7 +171,7 @@ font-family: 'Square Peg', cursive;" style="font-weight: 700;"
               <div class="flex flex-wrap -m-4">
                 <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
                   <a class="block relative h-48 rounded overflow-hidden">
-                    <img alt="ecommerce" class="object-cover object-center block" src="SBI MF.png">
+                    <img alt="SBI  Mutual funds logo" class="object-cover object-center block" src="SBI MF.png">
                   </a>
                   
                 </div>
