--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=62729dcb1dc34500127f9a50&product=sticky-share-buttons' async='async'></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
