--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <header class="text-gray-600 body-font" style="background-color: darkslateblue; 
     width: 100%; opacity: 0.93; padding: -0.5rem;">
     <div class="container mx-auto flex flex-wrap p-2 flex-col md:flex-row items-center">
-      <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0" ;">
+      <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0" href="/">
 
         <img src="/logo.png" height="70px" width="70px" alt="">
         <span style="font-size: 2.00rem;" class="ml-7 text-xl"
@@ -65,8 +65,8 @@
           Manch</span>
       </a>
       <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-        <a class="mr-5 hover:text-gray-900" style="color:white;" href="#about">About us</a>
-        <a class="mr-5 hover:text-gray-900" style="color:white;" href="#partner">Partners</a>
+        <a class="mr-5 hover:text-gray-900" style="color:white;" href="/#about">About us</a>
+        <a class="mr-5 hover:text-gray-900" style="color:white;" href="/#partner">Partners</a>
         <a class="mr-5 hover:text-gray-900" href="/contact.html" style="color:white;">Contact us</a>
       </nav>
 
