--- a/index.html
+++ b/index.html
@@ -1,26 +1,16 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <script type='text/javascript'
+    <meta charset="UTF-8">
+    <script type='text/javascript'
     src='https://platform-api.sharethis.com/js/sharethis.js#property=62729dcb1dc34500127f9a50&product=sticky-share-buttons'
     async='async'></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Square+Peg&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Square+Peg&display=swap" rel="stylesheet">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Sora:wght@259;800&family=Square+Peg&display=swap"
-    rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Square+Peg&display=swap" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="https://kit.fontawesome.com/2e21358c92.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.tailwindcss.com"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <script src="https://kit.fontawesome.com/2e21358c92.js" crossorigin="anonymous"></script> -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Dummy Website</title>
 </head>
-
 <body>
   <!-- Messenger Chat plugin Code -->
   <div id="fb-root"></div>
@@ -52,255 +42,83 @@
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
   </script>
-
-  <!-- Header start -->
-  <header class="text-gray-600 body-font" style="background-color: darkslateblue; 
-    width: 100%; opacity: 0.93; padding: -0.5rem;">
-    <div class="container mx-auto flex flex-wrap p-2 flex-col md:flex-row items-center">
-      <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0" href="/">
-
-        <img src="/logo.png" height="70px" width="70px" alt="">
-        <span style="font-size: 2.00rem;" class="ml-7 text-xl"
-          style="font-size: larger; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">Nivesh
-          Manch</span>
+  <!-- Header starts -->
+  <header class="text-gray-400 bg-gray-900 body-font">
+    <div class="container mx-auto flex flex-wrap p-4 flex-col md:flex-row items-center">
+      <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0" href="/index1.html">
+        <img src="/Logonew-removebg-preview.png" height="100px" width="100px" alt="">
+        <span class="ml-6 text-xl" style="font-size: xx-large">Nivesh Manch</span>
       </a>
       <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-        <a class="mr-5 hover:text-gray-900" style="color:white;" href="/#about">About us</a>
-        <a class="mr-5 hover:text-gray-900" style="color:white;" href="/#partner">Partners</a>
-        <a class="mr-5 hover:text-gray-900" href="/contact.html" style="color:white;">Contact us</a>
+        <a class="mr-5 hover:text-white" href="/index1.html">Home</a>
+        <a class="mr-5 hover:text-white" href="/offerings.html">Offerings</a>
+        <a class="mr-5 hover:text-white" href="/aboutus.html">About Us</a>
+        <a class="mr-5 hover:text-white" href="/Contactus.html">Contact Us</a>
       </nav>
-
+      <a href="/login.html">
+      <button class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover: text-white hover:bg-gray-700 rounded text-base mt-4 md:mt-0"> Login
+      
+        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+          <path d="M5 12h14M12 5l7 7-7 7"></path>
+        </svg>
+      </button>
+    </a>
     </div>
   </header>
-  <!-- header end -->
-  <!-- Hero start -->
-  <section class="text-gray-600 body-font" style="margin-top:100px;">
-    <div style="margin-left:25px; margin-right: 25px;" id="about">
-      <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900" style="text-align: center;">The Power
-        of Good Advice<br class="hidden lg:inline-block" />...........</h1>
-      <p class="mb-8 leading-relaxed" style="text-align: center;">Advices can lead to the fall and rise of empires. So
-        when its about your own empire why settle for less? Financial planning is not a luxury, it is a modern day
-        necessity. Nivesh Manch is a one stop solution for all your Investment and Insurance requirements.</p>
-      <p style="text-align: center;">"Nivesh Manch is a new generation investment management marketplace, offering end
-        to end customized wealth management solutions across 75 cities. We customize the best fit solutions for you from
-        our vast range of financial offerings: Mutual Funds, NFO, Insurance, Fixed Deposit, Corporate Bonds, PMS, ETFs.
-        We dedicate a separate vertical for NRIs. Nivesh Manch is being managed by a dedicated team of seasoned
-        investment professionals and is very well managing an AUM of ₹ 5 Crores from the esteemed investors from PAN
-        India. We are endorsed by HNIs &amp; NRI clients also. We are very grateful to our clients/ investors. At Nivesh
-        Manch, we maintain the highest degree of confidentiality &amp; abide by strict ethical code of conduct."</p>
-    </div>
-  </section>
-  <!-- Hero end -->
-
-  <!-- Features start-->
-  <section class="text-gray-600 body-font">
-    <div class="container px-5  mx-auto">
-      <div class="text-center mb-20">
-        <h1 class="sm:text-3xl text-2xl font-medium title-font text-gray-900 mb-4" style="
-font-family: 'Square Peg', cursive;" style="font-weight: 700;">
-          Investment Management Services
-        </h1>
-        <p class="text-base leading-relaxed xl:w-2/4 lg:w-3/4 mx-auto text-gray-500s" style="font-family: 'Akshar', sans-serif;
-            font-family: 'Square Peg', cursive;" style="font-size: large;">
-          “Do not save what is left after
-          spending but spend what is left after saving." </p>
-        <p style="font-family: Arial, Helvetica, sans-serif;" style="font-size: medium;">
-          "-Warren Buffet”
-        </p>
-        <div class="flex mt-6 justify-center">
-          <div class="w-16 h-1 rounded-full bg-indigo-500 inline-flex"></div>
-        </div>
+  <!-- Header ends -->
+  <!-- Main page -->
+  <section class="text-gray-400 bg-gray-900 body-font">
+    <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+      <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
+        <img class="object-cover object-center rounded" alt="hero" src="/kylo-FPZ8Lnn5Ws8-unsplash.jpg">
       </div>
-      <div class="flex flex-wrap sm:-m-4 -mx-4 -mb-10 -mt-4 md:space-y-0 space-y-6">
-        <div class="p-4 md:w-1/3 flex flex-col text-center items-center">
-          <div
-            class="w-20 h-20 inline-flex items-center justify-center rounded-full bg-indigo-100 text-indigo-500 mb-5 flex-shrink-0">
-            <i class="fa-3x fa-solid fa-piggy-bank"></i>
-            <path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
-            </svg>
+      <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
+        <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">Feel the power of Good Advices.</h1>
+        <p class="mb-8 leading-relaxed">Advices can lead to the fall and rise of empires. So
+          when its about your own empire why settle for less?</p>
+          <div class="flex justify-center">
+            <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg" ><a href="/offerings.html">Get Started</a> </button>
           </div>
-          <div class="flex-grow">
-            <h2 class="text-gray-900 text-lg title-font font-medium mb-3">
-              Funds
-            </h2>
-            <p class="leading-relaxed text-base">
-              Get customized options for your investments in Mutual Funds, Retirement Funds, FDs, Corporate Bonds and
-              other Portfolio Management Services.
-            </p>
-
-          </div>
-        </div>
-        <div class="p-4 md:w-1/3 flex flex-col text-center items-center">
-          <div
-            class="w-20 h-20 inline-flex items-center justify-center rounded-full bg-indigo-100 text-indigo-500 mb-5 flex-shrink-0">
-            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-              class="w-10 h-10" viewBox="0 0 24 24">
-              <circle cx="6" cy="6" r="3"></circle>
-              <circle cx="6" cy="18" r="3"></circle>
-              <path d="M20 4L8.12 15.88M14.47 14.48L20 20M8.12 8.12L12 12"></path>
-            </svg>
-          </div>
-          <div class="flex-grow">
-            <h2 class="text-gray-900 text-lg title-font font-medium mb-3">
-              Tax Planning
-            </h2>
-            <p class="leading-relaxed text-base">
-              Get all the advices and assistance while you do your tax planning. We provide over the edge assistance for
-              complete satisfaction of the consumer.
-            </p>
-
-          </div>
-        </div>
-        <div class="p-4 md:w-1/3 flex flex-col text-center items-center">
-          <div
-            class="w-20 h-20 inline-flex items-center justify-center rounded-full bg-indigo-100 text-indigo-500 mb-5 flex-shrink-0">
-            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-              class="w-10 h-10" viewBox="0 0 24 24">
-              <path d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"></path>
-              <circle cx="12" cy="7" r="4"></circle>
-            </svg>
-          </div>
-          <div class="flex-grow">
-            <h2 class="text-gray-900 text-lg title-font font-medium mb-3">
-              Insurance
-            </h2>
-            <p class="leading-relaxed text-base">
-              Get all types of insurance including Life , Motor(vehicle) and Health Insurance to keep your life smooth
-              and hassle free.
-            </p>
-
-          </div>
-        </div>
       </div>
-
-    </div>
+    </div>  
   </section>
-  <!-- AMC Partners Start -->
-  <section class="text-gray-600 body-font" id="partner">
-    <div class="container px-5  mx-auto" style="padding-bottom:0rem">
-      <div class="flex flex-col text-center w-full mb-20">
-        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900" style="margin-top:50px;">
-          Our Partners
-        </h1>
-        <section class="text-gray-600 body-font">
-          <div class="container px-5 py-24 mx-auto">
-            <div class="flex flex-wrap -m-4">
-              <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
-                <a class="block relative h-48 rounded overflow-hidden">
-                  <img alt="SBI  Mutual funds logo" class="object-cover object-center " src="SBI MF.png">
-                </a>
-
-              </div>
-              <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
-                <a class="block relative h-48 rounded overflow-hidden">
-                  <img alt="ecommerce" class="object-cover object-center  " src="AXIS MF.png">
-                </a>
-
-              </div>
-              <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
-                <a class="block relative h-48 rounded overflow-hidden">
-                  <img alt="ecommerce" class="object-cover object-center " src="Nippon_MF.png">
-                </a>
-
-              </div>
-              <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
-                <a class="block relative h-48 rounded overflow-hidden">
-                  <img alt="ecommerce" class="object-cover object-center " src="icici MF.png">
-                </a>
-
-              </div>
-              <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
-                <a class="block relative h-48 rounded overflow-hidden">
-                  <img alt="ecommerce" class="object-cover object-center  block" style="height: 231px;
-                    width: 232px;
-                    padding-bottom: 143px;" src="Reliance_MF.png">
-                </a>
-
-              </div>
-              <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
-                <a class="block relative h-48 rounded overflow-hidden">
-                  <img alt="ecommerce" class="object-cover object-center " src="Canara_MF.png"
-                    style="padding-top: 24px;">
-                </a>
-
-              </div>
-              <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
-                <a class="block relative h-48 rounded overflow-hidden">
-                  <img alt="ecommerce" class="object-cover object-center  block" src="Edeilweiss_MF.png">
-                </a>
-
-              </div>
-              <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
-                <a class="block relative h-48 rounded overflow-hidden">
-                  <img alt="ecommerce" class="object-cover object-center  block" src="HDFC MF.png">
-                </a>
-
-              </div>
-            </div>
-          </div>
-        </section>
-      </div>
-  </section>
-  <!-- AMC Partners End -->
-  <!-- Contact Details Start -->
-  <div id="contact">
-    <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900" style="text-align: center"> Call or Ping
-      us at 9650102543 </h1>
-    <!-- <iframe style="margin: auto;" src="https://docs.google.com/forms/d/e/1FAIpQLSfZSoh1wzun4TMoYnomt5_0WKEOfOMEXT_nvZnJ3NHyCtu29w/viewform?embedded=true" width="640" height="812" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe> -->
-  </div>
-  <!-- Contact Details End -->
-  <!-- Footer Start -->
-  <footer class="text-gray-600 body-font">
+  <!-- Main page ends -->
+  <!-- Footer starts -->
+  <footer class="text-gray-400 bg-gray-900 body-font">
     <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
-      <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
-        <img src="/logo.png" height="70px" width="70px" alt="">
-
-        <span class="ml-3 text-xl">Niveshmanch</span>
+      <a class="flex title-font font-medium items-center md:justify-start justify-center text-white">
+        <img src="/Logonew-removebg-preview.png" height="40px" width="40px" alt="">
+        <span class="ml-3 text-xl">Nivesh Manch</span>
       </a>
-      <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">
-        © 2020 Niveshmanch
+      <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">© 2021 Niveshmanch
+        <a href="https://twitter.com/knyttneve" class="text-gray-500 ml-1" target="_blank" rel="noopener noreferrer"></a>
       </p>
       <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
-        <a href-"https://www.facebook.com/niveshmanchsahihai/" class="text-gray-500">
-          <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5"
-            viewBox="0 0 24 24">
+        <a class="text-gray-400" href="https://www.facebook.com/niveshmanchsahihai/">
+          <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
             <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
           </svg>
         </a>
-        <a href-"https://www.instagram.com/nivesh_manch_/" class="ml-3 text-gray-500">
-          <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            class="w-5 h-5" viewBox="0 0 24 24">
+        <!-- <a class="ml-3 text-gray-400">
+          <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+            <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
+          </svg>
+        </a> -->
+        <a class="ml-3 text-gray-400" href="https://www.instagram.com/nivesh_manch_/">
+          <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
             <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
             <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
           </svg>
         </a>
-        <a href-"https://in.linkedin.com/in/nivesh-manch-3b110a22a?trk=people-guest_people_search-card"
-          class="ml-3 text-gray-500">
-          <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0"
-            class="w-5 h-5" viewBox="0 0 24 24">
-            <path stroke="none"
-              d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
+        <a class="ml-3 text-gray-400" href="https://in.linkedin.com/in/nivesh-manch-3b110a22a?trk=people-guest_people_search-card">
+          <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
+            <path stroke="none" d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
             <circle cx="4" cy="4" r="2" stroke="none"></circle>
           </svg>
         </a>
       </span>
     </div>
   </footer>
-  <!-- Footer end -->
+  <!-- Footer ends -->
 </body>
-
 </html>
-<!-- 
-<!doctype html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
-</body>
-</html> -->
