--- a/index1.html
+++ b/index1.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <script src="https://kit.fontawesome.com/2e21358c92.js" crossorigin="anonymous"></script> -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Nivesh Manch</title>
+    <title>Dummy Website</title>
 </head>
 <body>
   <!-- Messenger Chat plugin Code -->
