--- a/index1.html
+++ b/index1.html
@@ -50,7 +50,7 @@
         <span class="ml-6 text-xl" style="font-size: xx-large">Nivesh Manch</span>
       </a>
       <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-        <a class="mr-5 hover:text-white" href="/index1.html">Home</a>
+        <a class="mr-5 hover:text-white" href="/index.html">Home</a>
         <a class="mr-5 hover:text-white" href="/offerings.html">Offerings</a>
         <a class="mr-5 hover:text-white" href="/aboutus.html">About Us</a>
         <a class="mr-5 hover:text-white" href="/Contactus.html">Contact Us</a>
