--- a/contactadmin.html
+++ b/contactadmin.html
@@ -34,7 +34,8 @@
   <!-- Header ends -->
   <!-- error starts -->
   <section class="text-gray-400 bg-gray-900 body-font ">
-    <div class="container px-5 py-24 mx-auto">
+    <div class="container px-5 py-24 mx-auto" style="padding-top: 11rem;
+    padding-bottom: 9rem;">
       <div class="xl:w-1/2 lg:w-3/4 w-full mx-auto text-center">
         <p class="leading-relaxed text-lg">Contact Admin @ 9650102543 to activate you account.</p>
       </div>
@@ -43,7 +44,7 @@
   <!-- error ends -->
   <!-- Footer starts -->
   <footer class="text-gray-400 bg-gray-900 body-font">
-    <div class="container px-5 py-24 mx-auto flex items-center sm:flex-row flex-col">
+    <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
       <a class="flex title-font font-medium items-center md:justify-start justify-center text-white">
         <img src="/Logonew-removebg-preview.png" height="40px" width="40px" alt="">
         <span class="ml-3 text-xl">Nivesh Manch</span>
