--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <!-- <script src="https://kit.fontawesome.com/2e21358c92.js" crossorigin="anonymous"></script> -->
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Nivesh Manch</title>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZMETX607Q7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZMETX607Q7');
+</script>
 </head>
 <body>
   <!-- Messenger Chat plugin Code -->
